# polymarket-backend

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: Development_Log.md
migrations/: 0001_init.sql  0002_gmx_positions.sql  0003_funding_rates.sql  0004_liquidation.sql  0005_adl.sql  0006_advanced_orders.sql  0007_performance_indexes.sql  0008_timescaledb_setup.sql  0009_historical_klines.sql  0010_normalize_symbols.sql  0011_fix_referral_schema.sql  0012_fix_null_prices.sql  0017_add_market_category.sql
src/: main.rs
src/api/: mod.rs
src/api/handlers/: account.rs  adl.rs  auth.rs  deposit.rs  funding_rate.rs  kline.rs  liquidation.rs  market.rs  mod.rs  order.rs  position.rs  referral.rs  trigger_orders.rs  withdraw.rs
src/api/middleware/: metrics.rs  mod.rs
src/api/routes/: mod.rs
src/auth/: eip712.rs  jwt.rs  middleware.rs  mod.rs  rate_limit.rs
src/cache/: keys.rs  market_cache.rs  mod.rs  orderbook_cache.rs  position_cache.rs  price_cache.rs  pubsub.rs  redis_client.rs  user_cache.rs
src/config/: mod.rs
src/db/: mod.rs  timescale.rs
src/metrics/: mod.rs
src/models/: balance.rs  mod.rs  order.rs  user.rs
src/services/: mod.rs  oracle.rs  settlement.rs
src/services/market/: mod.rs
src/services/matching/: engine.rs  history.rs  mod.rs  orchestrator.rs  orderbook.rs  types.rs
src/utils/: mod.rs  response.rs
src/websocket/: binance_proxy.rs  channels.rs  handler.rs  mod.rs  routes.rs
